--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body{
-  background-color: rgb(48, 12, 32);
+  background-color: #300c20;
 display: flex;
 align-items: center;
 justify-content: center;
