--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans
 }
 
 .clock{
+    border:3px solid black;
 width:300px;
 height:300px;
 background-color: #272727;
@@ -20,18 +21,27 @@ align-items: center;
 justify-content: center;
 }
 
+.clock h1{
+    font-size:26px;
+ font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;  
+}
+
+.clock #star{
+    font-size:30px;
+}
+
 .btns{
     width:250px;
     height:20px;
     border-radius:20px;
     position: absolute;
-    top:250px;
+    top:290px;
     background-color:#ffffff;
     display: flex;
     gap:20px;
     flex-direction: row;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
 }
 
 .btnsc{
@@ -58,6 +68,7 @@ justify-content: center;
     padding-bottom:30px;
     font-size:35px;
 display: flex;
+  border:3px solid black;
 justify-content:center;
 align-items: center;
 width:250px;
