--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 body{
-  background-color: #300c20;
+    background-color: #86275c;
 display: flex;
 align-items: center;
 justify-content: center;
